--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,27 @@ h6 {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
+#portfolio .card-carousel .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: 1px solid #f0f0f0;
+  border-radius: 0;
+  background-color: #000;
+}
+
+footer .social-media {
+  gap: 1rem;
+}
+footer .social-media a {
+  transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+footer .social-media a:hover {
+  color: var(--bs-info);
+  transform: scale(1.4);
+}
 
 @media (min-width: 576px) {
   #home h1 {
