--- a/sass/main.scss
+++ b/sass/main.scss
@@ -274,6 +274,31 @@ h6 {
 			background-color: rgb(0, 0, 0, 0.5);
 		}
 	}
+	.card-carousel {
+		.card {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			height: 200px;
+			border: 1px solid #f0f0f0;
+			border-radius: 0;
+			background-color: #000;
+		}
+	}
+}
+
+footer {
+	.social-media {
+		gap: 1rem;
+		a {
+			transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+		}
+		a:hover {
+			color: var(--bs-info);
+			transform: scale(1.4);
+		}
+	}
 }
 
 @import './576px';
