--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ h6 {
 }
 #home .hero-img .hero-chevron {
   position: absolute;
-  bottom: 100px;
+  bottom: 150px;
 }
 
 #about {
@@ -330,6 +330,9 @@ footer .social-media a:hover {
   #home h5 {
     font-size: 1.5em;
     letter-spacing: 5px;
+  }
+  #home .hero-img .hero-chevron {
+    bottom: 100px;
   }
 }
 @media (min-width: 768px) {
