--- a/css/main.css
+++ b/css/main.css
@@ -126,16 +126,17 @@ h6 {
 .navbar .nav-list li a {
   position: relative;
   padding: 0.5em 1em;
-  border: 1px solid var(--bs-info);
+  border: 2px solid var(--bs-info);
   overflow: hidden;
   z-index: 3;
-  transition: box-shadow 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 .navbar .nav-list li a span {
   position: relative;
   z-index: 4;
 }
 .navbar .nav-list li a:hover {
+  color: var(--bs-info);
   box-shadow: 0px 0px 100px -5px var(--bs-info);
 }
 .navbar .nav-list li a:before {
