--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 @import "./animations";
 
 .bytesized-regular {
-    font-family: "Bytesized", sans-serif;
+    font-family: "Bytesized", sans-serif !important;
     font-weight: 400;
     font-style: normal;
     font-size: 12dvw;
@@ -17,28 +17,35 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    font-optical-sizing: auto;
-
-    .theme-wrapper {
-        position: fixed;
+    nav {
+        position: fixed !important;
         top: 0;
-        right: 0;
-        z-index: 1000;
-        button {
-            border: none;
+        left: 50%;
+        width: 100%;
+        max-width: 1400px;
+        transform: translateX(-50%);
+        .navbar-menu {
+            .navbar-end {
+                .navbar-item {
+                    transition: all 0.2s ease;
+                    &:hover {
+                        color: var(--bulma-link) !important;
+                        transform: scale(1.1);
+                    }
+                }
+            }
         }
     }
-}
 
-footer {
-    form {
-        .input,
-        .textarea {
-            border: none;
-            -webkit-box-shadow: var(--bulma-shadow);
-            -moz-box-shadow: var(--bulma-shadow);
-            box-shadow: var(--bulma-shadow);
+    footer {
+        form {
+            .input,
+            .textarea {
+                border: none;
+                -webkit-box-shadow: var(--bulma-shadow);
+                -moz-box-shadow: var(--bulma-shadow);
+                box-shadow: var(--bulma-shadow);
+            }
         }
     }
 }
