--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,6 +37,49 @@ body {
         }
     }
 
+    #servicesSection {
+        margin-top: 10rem; //TODO remove it
+        div {
+            .card-container {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 2rem;
+                .card {
+                    margin-bottom: 0;
+                    flex-basis: calc(33.33% - 1.5rem);
+                    flex-grow: 1;
+                    transition: transform 0.2s ease-in;
+                    .card-content {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        i {
+                            margin-bottom: 1.5rem;
+                            font-size: 4rem;
+                        }
+                        .content {
+                            font-family: var(--bulma-family-primary);
+                        }
+                    }
+                    &:hover {
+                        transform: scale(1.05);
+                    }
+                }
+                @media (max-width: 992px) {
+                    .card {
+                        flex-basis: calc(50% - 1rem);
+                    }
+                }
+                @media (max-width: 576px) {
+                    .card {
+                        flex-basis: 100%;
+                    }
+                }
+            }
+        }
+    }
+
     footer {
         form {
             .input,
